// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig merges loaders 1`] = `
Object {
  "context": "/Users/jake/Sites/Codecademy/npm/gamut/packages/webpack-config/src/__tests__",
  "devtool": "cheap-module-eval-source-map",
  "entry": "/Users/jake/Sites/Codecademy/npm/gamut/packages/webpack-config/src/__tests__/src/main.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      [Function],
      Object {
        "loader": "file-loader",
        "test": /\\\\\\.jpe\\?g\\$\\|\\\\\\.gif\\$\\|\\\\\\.png\\$\\|\\\\\\.svg\\$\\|\\\\\\.woff2\\?\\$\\|\\\\\\.ttf\\$\\|\\\\\\.eot\\|\\\\\\.wav\\$\\|\\\\\\.mp3\\$/,
      },
    ],
  },
  "output": Object {
    "devtoolFallbackModuleFilenameTemplate": "[resourcePath]?[hash]",
    "devtoolModuleFilenameTemplate": "[absolute-resource-path]",
    "filename": "[name].js",
    "path": "/Users/jake/Sites/Codecademy/npm/gamut/packages/webpack-config/src/__tests__/dist",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "__DEV__": true,
        "process.env.NODE_ENV": "\\"development\\"",
      },
    },
    ContextReplacementPlugin {
      "newContentRecursive": undefined,
      "newContentRegExp": /en/,
      "newContentResource": undefined,
      "resourceRegExp": /moment\\[\\\\/\\\\\\\\\\]locale\\$/,
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".webpack.js",
      ".web.js",
      ".js",
      ".scss",
      ".css",
      ".json",
    ],
    "modules": Array [
      "node_modules",
      "node_modules/@codecademy",
    ],
  },
}
`;

exports[`createConfig merges loaders without mergeLoader 1`] = `
Object {
  "context": "/Users/jake/Sites/Codecademy/npm/gamut/packages/webpack-config/src/__tests__",
  "devtool": "cheap-module-eval-source-map",
  "entry": "/Users/jake/Sites/Codecademy/npm/gamut/packages/webpack-config/src/__tests__/src/main.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "loader": "babel-loader",
        "options": Object {
          "cacheDirectory": true,
          "ignore": Array [
            "node_modules",
          ],
        },
        "test": /\\\\\\.js\\?\\$/,
      },
      Object {
        "loader": "file-loader",
        "test": /\\\\\\.jpe\\?g\\$\\|\\\\\\.gif\\$\\|\\\\\\.png\\$\\|\\\\\\.svg\\$\\|\\\\\\.woff2\\?\\$\\|\\\\\\.ttf\\$\\|\\\\\\.eot\\|\\\\\\.wav\\$\\|\\\\\\.mp3\\$/,
      },
      Object {
        "test": /\\\\\\.js\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "plugins": Array [
                "@babel/plugin-transform-runtime",
              ],
              "presets": Array [
                "codecademy",
                "codecademy",
              ],
            },
          },
        ],
      },
    ],
  },
  "output": Object {
    "devtoolFallbackModuleFilenameTemplate": "[resourcePath]?[hash]",
    "devtoolModuleFilenameTemplate": "[absolute-resource-path]",
    "filename": "[name].js",
    "path": "/Users/jake/Sites/Codecademy/npm/gamut/packages/webpack-config/src/__tests__/dist",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "__DEV__": true,
        "process.env.NODE_ENV": "\\"development\\"",
      },
    },
    ContextReplacementPlugin {
      "newContentRecursive": undefined,
      "newContentRegExp": /en/,
      "newContentResource": undefined,
      "resourceRegExp": /moment\\[\\\\/\\\\\\\\\\]locale\\$/,
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".webpack.js",
      ".web.js",
      ".js",
      ".scss",
      ".css",
      ".json",
    ],
    "modules": Array [
      "node_modules",
      "node_modules/@codecademy",
    ],
  },
}
`;
